---------------------------------------------------------------------------------------------------
Version: 0.8.5
Date: 05. 01. 2018
  Bugfixes:
    - Fixed an item grouping issue that appeared when using Dectorio with all the flooring settings disabled
---------------------------------------------------------------------------------------------------
Version: 0.8.4
Date: 29. 12. 2017
  Added:
    - Cliff explosives support
  Changed:
    - Updated incompatible mod notification for PickerTweaks
    - Moved Stone path and Concrete to Dectorio crafting tab to keep landscaping items together
  Bugfixes:
    - Fixed migration issue when migrating old save games from Dectorio 0.7.1 or earlier
    - Fixed an issue that was causing an error to display when placing signs in certain situations
  Locales:
    - Updated German and Korean translations
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 20. 12. 2017
  Added:
    - Ability to place deep water and green deep water tiles
    - Ability to place trees
    - Map colours for all the painted concrete variants
  Changed:
    - Adjusted concrete layering to allow grid concrete and normal concrete to merge nicely
    - Updated grid concrete map colour to differentiate it from normal concrete
    - Adjusted icons for gravel items
  Bugfixes:
    - Fixed issue with grid concrete when high resolution graphics are active
  Locales:
    - Updated Korean translations
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 19. 12. 2017
  Added:
    - New grid-based Concrete item that reflects the classic 0.15 Factorio concrete style
  Changed:
    - Updated Painted concrete graphics to soften the 'brick' look
  Bugfixes:
    - Tweaks to concrete layering to clean up some buggy tile transitions
    - Removal of duplicate recipe definitions for walls
  Locales: